<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="changePasswordUIInteractor"
            type="com.library.app.screens.onboarding.change_password.ChangePasswordUIInteractor" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.onboarding.change_password.ChangePasswordActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/TextStyle"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_50"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_size_50"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edt_old_password"
                style="@style/EditTextStyle"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:text="@={changePasswordUIInteractor.oldPasswpord}" />

            <EditText
                android:id="@+id/edt_new_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:text="@={changePasswordUIInteractor.newPasswpord}" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={changePasswordUIInteractor.rePasswpord}" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/ButtonStyle"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dimen_size_20"
                    android:background="@color/btn_green"
                    android:onClick="@{() -> changePasswordUIInteractor.submit()}"
                    android:text="@string/submit"
                    android:visibility="@{changePasswordUIInteractor.loading ? View.GONE : View.VISIBLE}" />

                <ProgressBar
                    android:id="@+id/pgbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="@{changePasswordUIInteractor.loading ? View.VISIBLE : View.GONE}" />
            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
