<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="signupViewModel"
            type="com.library.app.screens.onboarding.signup.SignupViewModel" />

        <variable
            name="signupUIInteractor"
            type="com.library.app.screens.onboarding.signup.SignupUIInteractor" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.onboarding.signup.SignupActivity">

        <TextView
            style="@style/TextStyle"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_50"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_size_50"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edt_name"
                style="@style/EditTextStyle"
                android:hint="@string/name"
                android:text="@={signupUIInteractor.name}" />

            <EditText
                android:id="@+id/edt_email"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={signupUIInteractor.email}" />

            <EditText
                android:id="@+id/edt_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={signupUIInteractor.password}" />

            <EditText
                android:id="@+id/edt_confirm_password"
                style="@style/EditTextStyle"
                android:layout_marginTop="@dimen/dimen_size_20"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={signupUIInteractor.repassword}" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    style="@style/ButtonStyle"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dimen_size_20"
                    android:background="@color/btn_green"
                    android:onClick="@{() -> signupUIInteractor.signup()}"
                    android:text="@string/signup"
                    android:visibility="@{signupUIInteractor.loading ? View.GONE : View.VISIBLE}" />

                <ProgressBar
                    android:id="@+id/pgbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="@{signupUIInteractor.loading ? View.VISIBLE : View.GONE}" />
            </RelativeLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
